[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wgman"
version = "0.1.0"
authors = [{name="zhiayang", email="zhiayang@nowhere.com" }]
description = "Simple wrapper to manage WireGuard configs"
readme = "README.md"
dependencies = ["click", "elevate", "psutil"]
requires-python = ">=3.11"

[project.scripts]
wgman = "wgman.main:main"

[project.urls]
"Homepage" = "https://github.com/zhiayang/wgman"
